--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,4 +1,8 @@
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 :root{
     --body-color:#FCFCFC;
     --container-color:#ffffff;
@@ -23,6 +27,9 @@
     --fw-700:700;
     --main-section-padding: 70px 0;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: "Roboto", serif;
 }
@@ -38,3 +45,34 @@ body.darkmode{
     --button-color:#2B2B2B;
     --border-color:#333333;
 }
+section{
+    padding: var(--main-section-padding);
+}
+.container{
+    width: min(1024px, 100% - 24px);
+    margin: auto;
+}
+ul{
+    list-style: none;
+}
+a{
+    font: inherit;
+    color: inherit;
+    text-decoration: none;
+}
+input,
+button,
+textarea{
+    font: inherit;
+    color: inherit;
+    border: none;
+    outline: none;
+}
+span{
+    font: inherit;
+    color: inherit;
+}
+img{
+    max-width: 100%;
+}
+/*  */
