--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -155,6 +155,7 @@ span.product-price{
 header {
     position: fixed;
     top: 0;
+    z-index: 10;
     width: 100%;
     padding: 25px 0;
     background-color: transparent;
@@ -172,6 +173,9 @@ header .container .logo a{
 }
 header .container nav .icons{
     gap: 15px;
+}
+header .container nav .icons img{
+    cursor: pointer;
 }
 header .container nav ul li a.active,
 header .container nav ul li a:hover{
@@ -193,9 +197,10 @@ header .container nav ul li a:hover{
         text-transform: uppercase;
         font-size: var(--fs-24px);
         font-weight: var(--fw-500);
-        color: var(--title-color);
         box-shadow: 3px 4px 10px 1px rgba(0 0 0 /.25);
+        color: var(--title-color);
         background-color: var(--body-color);
+        transition: all 500ms ease;
     }
     header .container nav ul.menu-toggle{
         right: 0;
@@ -217,6 +222,7 @@ header .container nav ul li a:hover{
     align-items: center;
     gap: 40px;
     margin-left: 80px;
+    color: var(--title-color);
     }
     header .container nav ul li.close-menu{
     display: none;
@@ -224,4 +230,13 @@ header .container nav ul li a:hover{
     header .container nav .icons .menu-icon{
     display: none;
     }
+}
+div.overlay{
+    position: absolute;
+    top: 0;
+    opacity: .8;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(88, 88, 88, 0.25);
+    transition: all 500ms ease;
 }
