--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -200,7 +200,7 @@ header .container nav ul li a:hover{
         box-shadow: 3px 4px 10px 1px rgba(0 0 0 /.25);
         color: var(--title-color);
         background-color: var(--body-color);
-        transition: all 500ms ease;
+        transition: all 300ms ease;
     }
     header .container nav ul.menu-toggle{
         right: 0;
@@ -238,5 +238,5 @@ div.overlay{
     width: 100%;
     height: 100%;
     background-color: rgba(88, 88, 88, 0.25);
-    transition: all 500ms ease;
+    transition: all 1s ease;
 }
