--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -35,6 +35,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
+    position: relative;
     font-family: "Roboto", serif;
     font-weight: var(--fw-400);
     background-color: var(--body-color);
@@ -178,7 +179,7 @@ header .container{
     gap: 30px;
 }
 header .container .logo a{
-    gap: 10px;
+    gap: 5px;
     font-size: var(--fs-16px);
     font-weight: var(--fw-700);
     color: var(--title-color);
@@ -253,10 +254,9 @@ div.overlay{
     transition: all 1s ease;
 }
 .home .container{
-    gap: 40px;
-    position: relative;
+    align-items: center;
+    row-gap: 40px;
     min-height: calc(100vh - 70px);
-    /* background-color: brown; */
 }
 .home .container article{
     flex-direction: column;
@@ -268,6 +268,10 @@ div.overlay{
     font-weight: var(--fw-500);
     color: var(--first-color);
 }
+.home .container article .home-btns{
+    flex-wrap: wrap;
+    row-gap: 20px;
+}
 .home .container article .home-btns .discover{
     padding: 16px 24px;
     font-size: var(--fs-16px);
@@ -276,26 +280,23 @@ div.overlay{
     color: #595959;
     box-shadow: 0 4px 4px 0 rgba(0 0 0 / .25);
 }
+.home .container .product-image img{
+    filter: drop-shadow(-2px 2px 9px #7a7a7a);
+}
 @media (max-width:991px) {
 .home .container{
     flex-direction: column-reverse;
-    align-items: center;
 }
 }
 @media (min-width:992px) {
 .home .container{
     flex-direction: initial;
-    align-items: center;
     justify-content: space-between;
 }
 .home .container .article{
     width: 39%;
 }
 .home .container .product-image{
-    width: 45%;
+    width: 40%;
 }
-}
-.home .container .product-image img{
-    filter: drop-shadow(2px 2px 7px #787878);
-    filter: drop-shadow(-2px 2px 9px #7a7a7a);
 }
