--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -133,7 +133,7 @@ p.description{
     font-size: var(--fs-16px);
     color: var(--text-color);
 }
-button.cart-btn{
+.cart-btn{
     display: inline-flex;
     padding: 20px 32px;
     font-size: clamp(var(--fs-15px), 5vw, var(--fs-16px));
