--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -117,8 +117,8 @@ h2.title{
     content: "";
     position: absolute;
     top: 0;
-    right: 50%;
-    transform: translateX(50%);
+    left: 50%;
+    transform: translateX(-50%);
     width: 67px;
     height: 1px;
     background-color: var(--first-color);
@@ -344,4 +344,42 @@ div.overlay{
     font-weight: var(--fw-500);
     color: var(--white-color);
     background-color: var(--first-color);
+}
+.our-story .container {
+    align-items: center;
+    gap: 60px;
+}
+.our-story .container article.article{
+    flex-direction: column;
+    align-items: start;
+    gap: 30px;
+    width: 100%;
+}
+.our-story .container article.article h2.overline::before{
+    left: 0;
+    transform: translateX(0%);
+}
+@media (max-width:991px) {
+    .our-story .container{
+        flex-direction: column-reverse;
+    }
+    .our-story .container .image img{
+        border-radius: 10px;
+        box-shadow: 0 6px 6px 0 rgba(0 0 0 / .3);
+    }
+}
+@media (min-width:992px) {
+    .our-story .container{
+        justify-content: space-between;
+    }
+    .our-story .container article.article{
+        width: 35%;
+    }
+    .our-story .container .image{
+        width: 40%;
+        background-color: var(--first-color);
+    }
+    .our-story .container .image img{
+        transform: translate(65px, -65px);
+    }
 }
