--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -504,3 +504,36 @@ div.overlay{
     color: var(--white-color);
     background-color: var(--first-color);
 }
+.subscribe .container {
+    padding: 60px 20px;
+    gap: 40px;
+    background-color: var(--first-color);
+}
+.subscribe .container .info{
+    flex-direction: column;
+    gap: 30px;
+}
+.subscribe .container .info h2{
+    font-size: var(--fs-36px);
+    font-weight: var(--fw-500);
+    color: var(--title-color);
+}
+.subscribe .container form input[type ="email"]{
+    max-width: 310px;
+    width: 100%;
+    padding: 20px;
+}
+@media (max-width:991px) {
+    .subscribe .container form{
+        justify-content: center;
+        flex-wrap: wrap;
+        row-gap: 20px;
+    }
+}
+@media (min-width:992px) {
+    .subscribe .container {
+        align-items: center;
+        justify-content: center;
+        grid-template-columns: 40% 45%;
+    }
+}
