--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -514,12 +514,14 @@ div.overlay{
     gap: 30px;
 }
 .subscribe .container .info h2{
+    --h2-color:#2E2E2E;
     font-size: var(--fs-36px);
     font-weight: var(--fw-500);
-    color: #2E2E2E;
+    color: var(--h2-color);
 }
 .subscribe .container .info p.description{
-    color: #595959;
+    --p-color:#595959;
+    color: var(--p-color);
 }
 .subscribe .container form input[type ="email"]{
     max-width: 310px;
